# ponto_sms_flet

./: .env_dev  README.md  hook_selenium.py  main.py  main_2.py  pyproject.toml  requirements.txt  setup.py
assets/: version_info.txt
components/: components.py
config/: config_env.py
controls/: components.py
controls/buttons/: elevated_button.py
controls/display/: confirm_dialog.py  progress_bar.py  snack_bar.py
controls/inputs/: autocomplete.py  checkboxs.py  input_text.py
data/: data_array.py  unidades.csv
models/: alert_snackbar.py  page_manager.py  splash_screen.py
models/enums/: enums.py
services/: authenticate_service.py  compress_pdf_file.py  create_pdf_service.py  divide_pdf_file.py  generate_service.py
services/data/: autocomplete.py  data_read_csv.py  data_search_service.py  data_service.py  dataframe_service.py  generate_df_service.py  generate_excel_file.py  generate_pdf_service.py  init_generate_service.py
utils/: additional_night.py  excel.py  extractor_data.py  format_col_dataframe.py  format_dataframe.py  format_excel.py  format_excel_file.py  generate_excel_file.py  share_model.py  validators.py
