[tool.poetry]
name = "basic-flet-app"
version = "0.1.0"
description = ""
authors = ["prmorais <prmorais1302@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
