[tool.poetry]
name = "basic-flet-app"
version = "0.1.0"
description = ""
authors = ["prmorais <prmorais1302@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.23.2"
selenium = "^4.22.0"
xlsxwriter = "^3.2.0"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
lxml = "^5.2.2"
psutil = "^6.0.0"
numpy = "2.0.0"
pandas = "^2.2.2"
cx-freeze = "^7.2.0"
winshell = "^0.6"
pywin32 = "^306"
pyinstaller-hooks-contrib = "^2024.8"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
