[tool.poetry]
name = "basic-flet-app"
version = "0.1.0"
description = ""
authors = ["prmorais <prmorais1302@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flet = "0.24.1"
selenium = "^4.22.0"
xlsxwriter = "^3.2.0"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
lxml = "^5.2.2"
psutil = "^6.0.0"
numpy = "2.0.0"
pandas = "^2.2.2"
winshell = "^0.6"
pywin32 = "^306"
pypdf = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
